# passpredict

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  astro.py  asv.conf.json  main.py  mkdocs.yml  passpredictor.py  profile_computation.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  skyfield_compare.ipynb  test_astro.py  test_passpredictor.py
.github/workflows/: build.yml  main.yml  publish.yml
benchmarks/: benchmark_observer.py  benchmark_predictions.py  benchmark_rotations.py  benchmark_solar.py  benchmark_timefn.py  benchmarks.py  profile_timefn.py  utils.py
cextern/sgp4/: Makefile
docs/: index.md  observers.md  satellites.md  sources.md
examples/: __init__.py  all_visual_satellites.py  brute_force_observer.py  celestrak_source.py  standard_observer.py  vallado_predict_11_6.py
passpredict/: __init__.py  __main__.py  _rotations.c  _rotations.cpp  _rotations.pyx  _solar.c  _time.cpp  _time.pyx  cache.py  caches.py  cli.py  constants.py  core.py  database.py  dbmodels.py  exceptions.py  geocoding.py  kepler.py  locations.py  main.py  models.py  nutation.py  nutation1980coef.py  observers.py  precession.py  predict.pxd  predict.py  predict.pyx  predict_py.py  predictcpp.pxd  predictions.py  predictors.py  propagate.pxd  propagate.py  propagate.pyx  rotations.py  satellites.py  schemas.py  solar.py  sources.py  (+8 more)
passpredict/data/: uscities100.csv  uscities_license.txt  worldcities100.csv
passpredict/ext/: .gitignore  Makefile  _overpass.c  _overpass.pyx  _rotations.c  _rotations.pyx  _solar.c  _solar.pyx  constants.py  coverpass.c  crotations.c  csolar.c  location.cpp  location.h  main.cpp  observer.cpp  observer.h  omm.h  orbit.cpp  orbit.h  overpass.py  passpredict.cpp  passpredict.h  predictions.py  propagate.py  rotations.py  satellite.cpp  satellite.h  solar.py  timefn.py  topocentric.py
passpredict/observers/: __init__.py  base.py  brute_force.py  functions.py  original.py  predicted_pass.py  standard.py
passpredict/rotations/: nutation.py  nutation1980coef.py  precession.py  rotations.py  transform.py
passpredict/satellites/: base.py  keplerian_predictor.py  sgp4_predictor.py
passpredict/tests/: test_kepler.py  test_models.py  test_predict.py  test_predictions.py  test_propagate.py  test_rotations.py  test_sgp4.py  test_solar.py  test_topocentric.py
passpredictor/: _sgp4.c  constants.py  interpolate.py  kepler.py  main.py  models.py  passpredictor.py  plot_blending.py  predict.py  propagate.py  rotations.py  sgp4.py  sgp4io.py  solar.py  timefn.py  topocentric.py
passpredictor/tests/: test_kepler.py  test_predict.py  test_propagate.py  test_rotations.py  test_sgp4.py  test_solar.py  test_timefn.py  test_topocentric.py
rotations/: core.py  eop_data.py  nutation.py  polar.py  precession.py  rotations.py  sidereal.py  transform.py
rotations/tests/: test_nutation.py  test_precession.py  test_rotations.py  test_sidereal.py  test_transform.py
src/passpredict/: __init__.py  _rotations.pyx  _solar.pyx  _time.pyx  _version.py  base.py  caches.py  cli.py  constants.py  core.py  exceptions.py  geocoding.py  locations.py  orbit.py  solar.py  sources.py  time.py  utils.py  zoneinfo.py
tests/: conftest.py  test_caches.py  test_cli.py  test_cython_compile.py  test_examples.py  test_geocoder.py  test_json_cache.py  test_kepler.py  test_location_predictors.py  test_locations.py  test_models.py  test_nutation.py  test_observers.py  test_observers_against_heavens_above.py  test_observers_against_n2yo.py  test_orbit.py  test_precession.py  test_predictions.py  test_propagate.py  test_rotations.py  test_schemas.py  test_shelf_cache.py  test_solar.py  test_sources.py  test_time.py  test_timefn.py  test_tle.py  test_topocentric.py
tests/data/: coordinates.txt  generate_predictions.py  skyfield_iss_rECEF.npy  zurich_iss.txt
tests/observers/: test_observer_benchmarks.py  test_observers.py  utils.py  (+3 more)
(+69 files in other folders)
