[project]
requires-python = ">=3.8"

[build-system]
requires = [
    "setuptools",
    "wheel",
    "numpy>=1.22",
    "Cython>=0.29.24"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
markers = [
    "predict",
    "slow"
]

[tool.coverage.run]
source = [
    "passpredict"
]

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-*"
test-requires = "pytest"
test-command = "pytest {project}/tests"
