[build-system]
requires = [
    "setuptools",
    "wheel",
    "numpy>=1.22",
    "Cython>=0.29.24",
    "orbit-predictor",
    "timezonefinder",
    "scipy>=1.7.3",
    "httpx",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
markers = [
    "predict",
    "slow"
]

[tool.coverage.run]
source = [
    "src/passpredict"
]

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-*"
skip = "*-musllinux_*"
build-verbosity = ""
test-extras = "dev"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
test-requires = "tzdata pytest numpy click"
