[metadata]
name = passpredict
version= attr: passpredict.__init__.__version__
keywords = iss predict orbit sgp4 satellite
author = Sam Friedman
#author_email = None
description = Predict upcoming satellite overpasses
long_description = file: README.md
url = https://www.github.com/samtx/passpredict
license = MIT
license_files: LICENSE
classifiers =
    License :: OSI Approved :: Python Software Foundation License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    passpredict
    passpredict.observers
    passpredict.satellites
python_requires = >=3.8
setup_requires =
    orbit-predictor
    timezonefinder
    scipy>=1.7.3
    httpx
install_requires =
    sgp4>=2.12
    numpy>=1.22
    scipy>=1.7.3
    orbit-predictor
    click
    rich
    httpx
    timezonefinder
    backports.zoneinfo; python_version < "3.9"
    tzdata; platform_system == "Windows"
zip_safe = False

[options.package_data]
* = *.txt, *.rst, *.dat, *.csv, *.md

[options.extras_require]
dev =
    Cython
    pytest>=6.2.5
    pytest-html
    pytest-cov
    flake8
docs =
    mkdocs-material
    mkdocstrings
    pytkdocs[numpy-style]

[options.entry_points]
console_scripts =
    passpredict = passpredict.cli:main
