[metadata]
name = passpredict
version= attr: passpredict._version.version
keywords = iss predict orbit sgp4 satellite
author = Sam Friedman
#author_email = None
description = Predict upcoming satellite overpasses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/samtx/passpredict
license = MIT
license_files: LICENSE
classifiers =
    License :: OSI Approved :: Python Software Foundation License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages =
    passpredict
    passpredict.observers
    passpredict.satellites
python_requires = >=3.8
install_requires =
    sgp4>=2.12
    numpy>=1.22
    scipy
    orbit-predictor
    click
    rich
    httpx
    timezonefinder
    backports.zoneinfo; python_version < "3.9"
    tzdata; platform_system == "Windows"
zip_safe = False

[options.package_data]
* = *.txt, *.rst, *.dat, *.csv, *.md

[options.extras_require]
dev =
    Cython>=0.29.24
    pytest>=6.2.5
    pytest-html
    pytest-cov
    flake8
docs =
    mkdocs-material
    mkdocstrings
    pytkdocs[numpy-style]

[options.entry_points]
console_scripts =
    passpredict = passpredict.cli:main
